menambahkan semantic elemen

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>belajar git</title>
   </head>
   <body>
-    <h1>hello world</h1>
+    <header>
+      <nav>
+        <a href="#">home</a>
+        <a href="#">about</a>
+      </nav>
+    </header>
+    <section class="main">
+      <h1>hello git</h1>
+    </section>
+    <footer></footer>
   </body>
 </html>
