--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <section class="main">
       <h1>hello git</h1>
     </section>
-    <footer></footer>
+    <footer>
+      <span>&copy; 2023</span>
+    </footer>
   </body>
 </html>
